--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 
                         <tr>
                             <td width="80%" valign="middle" align="justify">
-                                I am proud to be advised by Prof. <a href="http://www.cs.utoronto.ca/%7Efidler/">Sanja Fidler</a>
-                                and Prof. <a href="https://jimmylba.github.io/">Jimmy Ba</a> at University of Toronto, affiliated with <a href='http://vectorinstitute.ai/'>Vector Institute</a> and Nvidia.
+                                I am proud to be advised by Prof. <a href="http://www.cs.utoronto.ca/%7Efidler/">Sanja Fidler</a> and Prof. <a href="https://jimmylba.github.io/">Jimmy Ba</a> at University of Toronto, affiliated with <a href='http://vectorinstitute.ai/'>Vector Institute</a> and Nvidia.
                                 My name is pronounced as <a href='https://translate.google.com/#zh-CN/zh-CN/%E4%BA%AD%E5%8D%88'>Ting-Wu</a>, and it means "midday" in Chinese.<br><br>
 
                                 Throughout my PhD study, I have been exploring scalable, generalized and efficient methods to learn physics-based motion skills for robotics and animation tasks.
@@ -148,7 +147,7 @@
                             <sectionheading>Publications and Patents</sectionheading></tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_kinematics.png" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_kinematics.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>Physics-based Human Motion Estimation and Synthesis from Videos</heading></a><br>
                                     <a href='https://kevincxie.github.io/'>Kevin Xie</a>,
@@ -170,7 +169,7 @@
                         </tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_unicon_cover.png" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_unicon_cover.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>UniCon: Universal Neural Controller For Physics-based Character Motion</heading></a><br>
                                     <strong>Tingwu Wang</strong>,
@@ -192,7 +191,7 @@
                         </tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_diverseMotionTransfer.png" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_diverseMotionTransfer.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>Learning to Generate Diverse Dance Motions with Transformer</heading></a><br>
                                     <a href='http://lijiaman.github.io/'>Jiaman Li</a>,
@@ -214,7 +213,7 @@
                         </tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_mbbl_front_index.png" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_mbbl_front_index.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>Benchmarking Model-Based Reinforcement Learning</heading></a><br>
                                     <strong>Tingwu Wang</strong>,
@@ -240,7 +239,7 @@
                         </tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_POPLIN_title.png" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_POPLIN_title.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>Exploring Model-based Planning with Policy Networks</heading></a><br>
                                     <strong>Tingwu Wang</strong>
@@ -256,7 +255,7 @@
                         </tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_nge_title.png" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_nge_title.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>Neural Graph Evolution: Towards Efficient Automatic Robot Design</heading></a><br>
                                     <strong>Tingwu Wang</strong>*,
@@ -277,7 +276,7 @@
                         </tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_nervenet.png" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_nervenet.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>NerveNet: Learning Structured Policy with Graph Neural Networks</heading></a><br>
                                     <strong>Tingwu Wang</strong>*,
@@ -296,7 +295,7 @@
                         </tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_virtualhouse.png" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_virtualhouse.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>VirtualHome: Simulating Household Activities via Programs</heading></a><br>
                                     <a href='http://people.csail.mit.edu/xavierpuig/'>Xavier Puig</a>,
@@ -322,7 +321,7 @@
                         </tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_epochs.png" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_epochs.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>Access Points Selection in Super WiFi Network Powered by Solar Energy Harvesting</heading></a><br>
                                     <strong>Tingwu Wang</strong>,
@@ -340,7 +339,7 @@
 
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_vtc16.png" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_vtc16.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>Access Strategy in Energy Harvesting Super WiFi Network: A POMDP Method</heading></a><br>
                                     <strong>Tingwu Wang</strong>,
@@ -361,7 +360,7 @@
                         </tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
-                                <img src="resources/thumbnail_dataset.jpg" alt="" width="100%" style="border-style: none">
+                                <img src="resources/thumbnail_dataset.jpg" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>Costume Detection and Attribute Value Identification Method and System</heading></a><br>
                                     <a href='https://puzzledqs.github.io/'>Qiu Shi</a>,
@@ -507,8 +506,8 @@
                                     Mr. <a href="http://www.cs.toronto.edu/~byang/">Bin Yang</a>,
                                     Ms. Rachel Ye,
                                     <br>
-                                    my supervisor Prof. <a href="http://www.cs.utoronto.ca/%7Efidler/">Sanja Fidler</a> and my angel Mia Ma
-                                    for their help when I first arrived in this country.
+                                    my supervisor Prof. <a href="http://www.cs.utoronto.ca/%7Efidler/">Sanja Fidler</a> for their help when I first arrived in this country.
+                                    Thank you Mia Ma for being by my side :)!
                                     <br>
                                     Your help is so important to me, and I will always be grateful ;P
                                     <br>
