--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                 <td>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
                         <p align="center"><font size="7">Tingwu Wang<img style="height:75px;" align="top" src="resources/tingwu.png"> </font><br>
-                        PhD with University of Toronto, Vector Institute and Nvidia. <br>
-                            Phone: +1 (416) 830 - 1487.
-                            Email: tingwuwang[at]cs[dot]toronto[dotted]edu<br>
+                        Research scientist at Nvidia.  Phone: +1 (416) 830 - 1487. Email = A+B; <br>
+                        A: wode406, tingwuw; wilsonwanguoft, tingwuwang <br> 
+                        B: @hotmail.com, @nvidia.com, @gmail.com, @cs.toronto.edu<br>
                         </p>
                         <p align=center><font size='5'>
                             <img style="width: 15px; height:18px;" src="resources/cv.jpg"> <a href="resources/cv.pdf">CV / Resume</a> |
@@ -83,10 +83,12 @@
 
                         <tr>
                             <td width="80%" valign="middle" align="justify">
-                                I am proud to be advised by Prof. <a href="http://www.cs.utoronto.ca/%7Efidler/">Sanja Fidler</a> and Prof. <a href="https://jimmylba.github.io/">Jimmy Ba</a> at University of Toronto, affiliated with <a href='http://vectorinstitute.ai/'>Vector Institute</a> and Nvidia.
+                                I am currently a research scientist in Nvidia's animation group.
+                                Previously I obtained my PhD in University of Toronto, proudly advised by Prof. <a href="http://www.cs.utoronto.ca/%7Efidler/">Sanja Fidler</a>
+                                and Prof. <a href="https://jimmylba.github.io/">Jimmy Ba</a>.
                                 My name is pronounced as <a href='https://translate.google.com/#zh-CN/zh-CN/%E4%BA%AD%E5%8D%88'>Ting-Wu</a>, and it means "midday" in Chinese.<br><br>
 
-                                Throughout my PhD study, I have been exploring scalable, generalized and efficient methods to learn physics-based motion skills for robotics and animation tasks.
+                                I have been exploring scalable, generalized and efficient methods to learn physics-based motion skills for robotics and animation tasks.
                                 Reinforcement learning and graph neural networks have been the two most important mathematical tools for my research.<br>
                                 I am especially interested in character animation. I believe in the near future, characters animated by neural networks will be used in real-life applications in movies and video games.
                             </td>
@@ -104,7 +106,7 @@
                                         <img align="center" src='resources/ut.png' style="width: 40px; height: 40px;">
                                         PhD in Computer Science @
                                         <span style="font-weight: bold;">University of Toronto</span>
-                                        <span style="float:right">Jan. 2018 - 2022</span> <br>
+                                        <span style="float:right">Jan. 2018 - June. 2022</span> <br>
                                         Toronto, Ontario, Canada
                                         <span style="float:right;">Advisor:
                                             <a href="http://www.cs.utoronto.ca/%7Efidler/">Prof. Sanja Fidler</a> and
