--- a/index.html
+++ b/index.html
@@ -171,6 +171,21 @@
                         </tr>
                         <tr>
                             <td width="30%" valign="top" align="center">
+                                <img src="resources/graphcon_teaser.png" alt="" width="75%" style="border-style: none">
+                                <td width="67%" valign="top">
+                                    <p><heading>Learning Scalable Physics-based Motion Skills with Reinforcement Learning</heading></a><br>
+                                    <strong>Tingwu Wang</strong>
+                                    <br>
+                                    <em>PhD Thesis</em>, 2022<br>
+
+                                    <span style="float:right;">
+                                        <a href="https://tspace.library.utoronto.ca/handle/1807/128326">Project Webpage</a>
+                                    </span>
+                                    </p>
+                                </td>
+                        </tr>
+                        <tr>
+                            <td width="30%" valign="top" align="center">
                                 <img src="resources/thumbnail_kinematics.png" alt="" width="80%" style="border-style: none">
                                 <td width="67%" valign="top">
                                     <p><heading>Physics-based Human Motion Estimation and Synthesis from Videos</heading></a><br>
